tests/unit/verification/snapshots/unit_test__verification__lifecycle__verification_incomplete_waiver_resolution.snap
---
source: tests/unit/verification/lifecycle.rs
expression: rendered
---
[verify] src/api.rs
   |owner: src/api
   |stress: pending phase=after_unit_tests_pass fingerprint=rustv:745d9b51631431fd
   |why: stress=profile declares public API or integration surface
   |resolution: stress.waiver=incomplete: missing owner, reason, expires_at
   |requires: stress=p50,p99,p999,load_steps,sla_result
   |fact: stress.profile=public_api
   |contract: stress=stress skill must report p50/p99/p999, load steps, and SLA result for this fingerprint
