tests/unit/verification/snapshots/unit_test__verification__lifecycle__verification_parser_regression_task.snap
---
source: tests/unit/verification/lifecycle.rs
assertion_line: 162
expression: rendered
---
[verify:regression] pending src/domain.rs
   |owner: src/domain
   |phase: scheduled_regression
   |why: parser facts show a branch coordinating several child modules or local owners
   |fact: child_modules=3
   |fact: owner_deps=0
   |contract: regression skill must report source growth, dependency drift, and module-cycle status for this fingerprint
   |fingerprint: rustv:bc6b6809aece96da
