tests/unit/verification/snapshots/unit_test__verification__lifecycle__verification_profile_tasks.snap
---
source: tests/unit/verification/lifecycle.rs
assertion_line: 36
expression: rendered
---
[verify:stress] pending src/api.rs
   |owner: src/api
   |phase: after_unit_tests_pass
   |why: profile declares public or latency-sensitive surface
   |fact: profile=public_api,external_dependency,security_boundary,latency_sensitive
   |contract: stress skill must report p50/p99/p999, load steps, and SLA result for this fingerprint
   |fingerprint: rustv:1dd33c82ddc866ec

[verify:chaos] pending src/api.rs
   |owner: src/api
   |phase: before_release
   |why: profile declares dependency, persistence, or availability responsibility
   |fact: profile=public_api,external_dependency,security_boundary,latency_sensitive
   |contract: chaos skill must report injected failures, degradation behavior, and recovery result for this fingerprint
   |fingerprint: rustv:417d26c989f0dee8

[verify:security] pending src/api.rs
   |owner: src/api
   |phase: before_release
   |why: profile declares auth, authorization, secret, or trust-boundary logic
   |fact: profile=public_api,external_dependency,security_boundary,latency_sensitive
   |contract: security skill must report scanned attack classes and authorization-boundary result for this fingerprint
   |fingerprint: rustv:58f49ac48b86b19e
